<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/title"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <ImageView

            android:layout_width="@dimen/logo_image_width"
            android:layout_height="@dimen/logo_image_height"
            android:src="@drawable/neworder"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            style="@style/text_view_title"/>



    </LinearLayout>

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/intro_page4_text"

        />

    <include layout="@layout/book_your_ride_button"/>
</RelativeLayout>